2007-10-09  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/urlwrite.cc (Furlwrite, Furlread) [! HAVE_CURL]:
	Throw error instead of returning empty string hiding error message
	in third return value.

2007-10-08  David Bateman  <dbateman@free.fr>

	*  input.cc (quoting_filename): Function to add a leading quote to
	a string if needed.
	(accept_line): Function to check if a string needs a closing quote
	before calling the rl_newline function.
	(initialize_command_input): Initialize completer_quote_characters,
	filename_quote_characters, quoting_function,
	user_accept_line_function.

	* data.cc (template <class T> static make_diag (...)): New
	template class version of make_diag. Make other make_diag
	functions depend on it.
	( static octave_value make_diag (const octave_value&, 
	octave_idx_type)): Treat all possible internal Octave types.

2007-10-08  John W. Eaton  <jwe@octave.org>

	* load-save.cc 	(save_vars, dump_octave_core):
	Don't pass INFNAN_WARNED to do_save.
	(do_save): Delete unused arg, INFNAN_WARNED.
	Don't pass INFNAN_WARNED to save_ascii_data.
	* ls-oct-ascii.cc (save_ascii_data_for_plotting):
	Don't pass INFNAN_WARNED to save_ascii.
	(save_ascii_data): Delete unused arg, INFNAN_WARNED.

	* ov.h (octave_value::save_ascii): Delete unused arg, INFNAN_WARNED.
	* ov-base-int.cc (octave_base_int_matrix<T>::save_ascii,
	octave_base_int_scalar<T>::save_ascii): Likewise.
	* ov-base-sparse.cc (octave_base_sparse<T>::save_ascii): Likewise.
	* ov-base.cc (octave_base_value::save_ascii): Likewise.
	* ov-bool-mat.cc (octave_bool_matrix::save_ascii): Likewise.
	* ov-bool.cc (octave_bool::save_ascii): Likewise.
	* ov-cell.cc (octave_cell::save_ascii): Likewise.
	* ov-fcn-handle.cc (octave_fcn_handle::save_ascii): Likewise.
	* ov-fcn-inline.cc (octave_fcn_inline::save_ascii): Likewise.
	* ov-list.cc (octave_list::save_ascii): Likewise.
	* ov-struct.cc (octave_struct::save_ascii): Likewise.
	* ov-str-mat.cc (octave_char_matrix_str::save_ascii): Likewise.